# githubMCP

./: agent.ipynb  pyproject.toml
