[project]
name = "githubmcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "langchain>=1.2.7",
    "langchain-community>=0.4.1",
    "langchain-mcp-adapters>=0.2.1",
    "langgraph>=1.0.7",
    "python-dotenv>=1.2.1",
]
